"С переделкой контроллера + стримы"